k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lingolearn
  namespace: lingolearn
  labels:
    app: lingolearn
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lingolearn
  template:
    metadata:
      labels:
        app: lingolearn
    spec:
      containers:
        - name: lingolearn
          image: ghcr.io/willuhmjs/lingolearn:latest # {"$image": "lingolearn-image"}
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
          resources:
            requests:
              memory: '2Gi'
              cpu: '2000m'
            limits:
              memory: '32Gi'
              cpu: '16000m'
