k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lingolearn
  namespace: lingolearn
  labels:
    app: lingolearn
  annotations:
    traefik.ingress.kubernetes.io/service.sticky.cookie: 'true'
    traefik.ingress.kubernetes.io/service.sticky.cookie.name: 'sticky-session'
    traefik.ingress.kubernetes.io/service.sticky.cookie.secure: 'true'
spec:
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    app: lingolearn
