k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lingolearn
  namespace: lingolearn
  annotations:
    cert-manager.io/cluster-issuer: cs-dns-cluster
spec:
  ingressClassName: traefik
  rules:
    - host: lingolearn.cs.odu.edu
      http:
        paths:
          - backend:
              service:
                name: lingolearn
                port:
                  number: 3000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - lingolearn.cs.odu.edu
      secretName: lingolearn-tls
